# origami_bot

./: CMakeLists.txt  README.md  package.xml
config/: maestro_settings.txt  settings.yaml
include/origami_bot/: origami_main.h
launch/: origami_bot.launch  origami_bot_diff_tf.launch
scripts/: export_pins.sh  maestro_code.txt
src/: motor_test.cpp  odometry.cpp  origami_main.cpp
